2008-09-01  Bob Mauchin  <zebob.m@pengzone.org>

	** Fix for bug #549228

	* mail/mail-stub-exchange.c (expunge_uids): String fix. 

2008-08-28  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-exchange.c (find_deleted_ids):
	* storage/exchange-component.c (impl_createView):
	Fix a couple compiler warnings.

2008-08-18  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.90 release and version bump.

2008-08-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #462242

	* calendar/e-cal-backend-exchange.c: (remove_calendar): Report success
	when trying to delete nonexisting calendar on the server.

2008-08-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #324203

	* camel/camel-exchange-provider.c: (exchange_conf_entries[]):
	New entry to select whether allows GAL browsing or not.
	* addressbook/e-book-backend-gal.c: (build_query): Do not let it crash.
	* addressbook/e-book-backend-gal.c: (can_browse), (start_book_view),
	(ldap_search_handler), (get_static_capabilities): Check whether
	browsing of the GAL is requested or not and act based on that.

2008-08-16  Patrick Ohly  <patrick.ohly@gmx.de>

	** Fix for bug #546934

	* addressbook/e-book-backend-exchange.c: The list of collected
	changes in ctx->changes was never returned to the caller. Instead
	the list was leaked when freeing the context. For deleted items,
	an empty vcard with the UID has to be returned. Instead
	find_deleted_ids() returned the UID. find_deleted_ids() is a
	callback for g_hash_table_foreach() and modified the hash that is
	iterated over. The effect is that the iteration was stopped
	prematurely, leading to incorrect change tracking.

2008-08-14  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #489236

	* mail/mail-stub-exchange.c: (get_folder_contents_online):
	Update high_article_num properly to see all messages in the folder.

2008-08-12  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #547308
